--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,3 +1,4 @@
 ###manage
 ADMIN.USER.NAME.EMPTY=user's name could not be empty
 adminUserVo.password.NotNull=user's password could not be null
+org.hibernate.validator.constraints.Email.message=is not a valid email address
