--- a/src/main/resources/messages/messages_zh_CN.properties
+++ b/src/main/resources/messages/messages_zh_CN.properties
@@ -1,3 +1,4 @@
 ###manage
 ADMIN.USER.NAME.EMPTY=\u7528\u6237\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A
 adminUserVo.password.NotNull=\u7528\u6237\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
+org.hibernate.validator.constraints.Email.message=\u4E0D\u5408\u6CD5\u7684\u90AE\u4EF6\u5730\u5740
